# d3es-vita

./: .gitignore  README.md
neo/: CMakeLists.txt  Makefile  Makefile2  config.h
neo/d3xp/: Actor.cpp  Entity.h  Game_local.cpp  Game_local.h  Grabber.cpp  Player.cpp  Player.h  Projectile.cpp  Trigger.cpp
neo/d3xp/ai/: AAS_routing.cpp  AI.h  AI_events.cpp
neo/d3xp/anim/: Anim.cpp  Anim_Blend.cpp
neo/d3xp/gamesys/: SysCvar.cpp
neo/framework/: Common.cpp  Common.h  File.cpp  File.h  FileSystem.cpp  Game.h  Session.cpp  Session_local.h  UsercmdGen.cpp  fios_vita.h
neo/framework/minizip/: ioapi.h
neo/game/: Actor.cpp  Actor.h  AimAssist.cpp  AimAssist.h  Entity.h  Game_local.cpp  Game_local.h  Player.cpp  Player.h
neo/game/ai/: AI.h
neo/idlib/: Heap.cpp  Lib.h
neo/idlib/math/: Math.cpp  Math.h  Simd.cpp  Simd.h  Simd_NEON.cpp  Simd_NEON.h  Simd_SSE.cpp  Simd_SSE2.cpp  Simd_SSE3.cpp
neo/livearea/: template.xml
neo/mobile/: Android.mk  Android_game.mk  Android_game_d3xp.mk  game_interface.cpp
neo/renderer/: Image_init.cpp  Image_load.cpp  Interaction.cpp  Material.cpp  ModelOverlay.cpp  RenderSystem.cpp  RenderSystem_init.cpp  RenderWorld_portals.cpp  VertexCache.cpp  draw_common.cpp  draw_gles2.cpp  framebuffer.cpp  qgl_proc.h  tr_backend.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_stencilshadow.cpp  tr_trisurf.cpp  tr_turboshadow.cpp
neo/renderer/glsl/: blendLightShaderVP.cpp  cubeMapShaderFP.cpp  diffuseCubeShaderVP.cpp  diffuseMapShaderFP.cpp  diffuseMapShaderVP.cpp  fogShaderFP.cpp  fogShaderVP.cpp  interactionPhongShaderFP.cpp  interactionPhongShaderVP.cpp  interactionShaderFP.cpp  interactionShaderVP.cpp  reflectionCubeShaderVP.cpp  skyboxCubeShaderVP.cpp  stencilShadowShaderFP.cpp  stencilShadowShaderVP.cpp  zfillClipShaderFP.cpp  zfillClipShaderVP.cpp  zfillShaderFP.cpp  zfillShaderVP.cpp
neo/sound/: snd_local.h  snd_system.cpp  snd_wavefile.cpp  snd_world.cpp
neo/sys/: cpu.cpp  events.cpp  glimp.cpp  platform.h  sse2neon.h  sys_public.h  threads.cpp
neo/sys/linux/: main.cpp
neo/sys/posix/: posix_main.cpp  posix_net.cpp
